# shitpostlib

./: .gitignore  CMakeLists.txt  README.md  shitpostlib.kdev4
assets/: gaydict.json
include/cjson/: cJSON.c  cJSON.h
include/gaylib/: gaylib.c  gaylib.h
include/utfutils/: utf8.c  utf8_decode.c  utf8_decode.h
src/: main.c
